--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": [
         "soyhuce",
         "laravel",
-        "phpstan-extension"
+        "phpstan"
     ],
     "homepage": "https://github.com/soyhuce/phpstan-extension",
     "license": "MIT",
@@ -17,8 +17,9 @@
     ],
     "require": {
         "php": "^8.1",
-        "spatie/laravel-package-tools": "^1.9.2",
-        "illuminate/contracts": "^9.0"
+        "illuminate/support": "^9.0",
+        "nesbot/carbon": "^2.0",
+        "phpstan/phpstan": "^1.4.5"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.7",
@@ -34,8 +35,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Soyhuce\\PhpstanExtension\\": "src",
-            "Soyhuce\\PhpstanExtension\\Database\\Factories\\": "database/factories"
+            "Soyhuce\\PhpstanExtension\\": "src"
         }
     },
     "autoload-dev": {
@@ -55,16 +55,17 @@
         ]
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true,
+            "phpstan/extension-installer": true
+        }
     },
     "extra": {
-        "laravel": {
-            "providers": [
-                "Soyhuce\\PhpstanExtension\\PhpstanExtensionServiceProvider"
-            ],
-            "aliases": {
-                "PhpstanExtension": "Soyhuce\\PhpstanExtension\\Facades\\PhpstanExtension"
-            }
+        "phpstan": {
+            "includes": [
+                "extension.neon"
+            ]
         }
     },
     "minimum-stability": "dev",
