Add extension for return type of Request::date

--- a/tests/Features/DateCarbonImmutable/phpstan-tests.neon
+++ b/tests/Features/DateCarbonImmutable/phpstan-tests.neon
@@ -10,6 +10,10 @@ services:
     tags:
       - phpstan.broker.dynamicFunctionReturnTypeExtension
 
+  - class: Soyhuce\PhpstanExtension\ReturnTypes\RequestDateExtension
+    tags:
+      - phpstan.broker.dynamicMethodReturnTypeExtension
+
 parameters:
   bootstrapFiles:
     - bootstrap.php
