--- a/extension.neon
+++ b/extension.neon
@@ -7,6 +7,10 @@ services:
     tags:
       - phpstan.broker.dynamicFunctionReturnTypeExtension
 
+  - class: Soyhuce\PhpstanExtension\ReturnTypes\RequestDateExtension
+    tags:
+      - phpstan.broker.dynamicMethodReturnTypeExtension
+
 rules:
   - Soyhuce\PhpstanExtension\Rules\CarbonCopyRule
   - Soyhuce\PhpstanExtension\Rules\NoAliasUseRule
