--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,13 +14,11 @@ jobs:
       matrix:
         os: [ ubuntu-latest ]
         php: [ 8.1, 8.2 ]
-        laravel: [ 9.* ]
+        laravel: [ 9.*, 10.* ]
         stability: [ prefer-lowest, prefer-stable ]
-        include:
-          - laravel: 9.*
-            testbench: 7.*
         exclude:
           - php: 8.2
+            laravel: 9.*
             stability: prefer-lowest
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
@@ -52,7 +50,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
+          composer require "laravel/framework:${{ matrix.laravel }}" --no-interaction --no-update
           composer update --${{ matrix.stability }} --prefer-dist --no-interaction
 
       - name: Execute tests
