--- a/composer.json
+++ b/composer.json
@@ -16,22 +16,21 @@
         }
     ],
     "require": {
-        "php": "^8.2",
-        "illuminate/support": "^10.0 || ^11.0",
+        "php": "^8.3",
+        "illuminate/support": "^11.0",
         "nesbot/carbon": "^2.0 || ^3.0",
-        "phpstan/phpstan": "^1.10.57"
+        "phpstan/phpstan": "^2.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.7",
-        "larastan/larastan": "^2.0.1",
-        "nunomaduro/collision": "^7.10 || ^8.0",
-        "orchestra/testbench": "^8.0 || ^9.0",
-        "pestphp/pest": "^2.24",
-        "pestphp/pest-plugin-laravel": "^2.2",
+        "larastan/larastan": "^3.0",
+        "nunomaduro/collision": "^8.0",
+        "orchestra/testbench": "^9.0",
+        "pestphp/pest": "^3.0",
+        "pestphp/pest-plugin-laravel": "^3.0",
         "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan-deprecation-rules": "^1.0",
-        "phpstan/phpstan-phpunit": "^1.0",
-        "phpunit/phpunit": "^10.4"
+        "phpstan/phpstan-deprecation-rules": "^2.0",
+        "phpstan/phpstan-phpunit": "^2.0"
     },
     "autoload": {
         "psr-4": {
