--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,18 +13,16 @@ jobs:
       fail-fast: true
       matrix:
         os: [ ubuntu-latest ]
-        php: [ 8.2, 8.3 ]
-        laravel: [ 10.*, 11.* ]
+        php: [ 8.3, 8.4 ]
+        laravel: [ ^11.0 ]
         carbon: [ ^2.0, ^3.0 ]
         stability: [ prefer-lowest, prefer-stable ]
         include:
-          - laravel: 10.*
-            testbench: 8.*
-          - laravel: 11.*
-            testbench: 9.*
+          - laravel: ^11.0
+            testbench: ^9.0
         exclude:
-          - laravel: 10.*
-            carbon: ^3.0
+          - php: 8.4
+            stability: prefer-lowest
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - C${{ matrix.carbon }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
