--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,20 +14,20 @@ jobs:
       matrix:
         os: [ ubuntu-latest ]
         php: [ 8.3, 8.4 ]
-        laravel: [ ^11.0 ]
-        carbon: [ ^2.0, ^3.0 ]
+        laravel: [ ^11.0, ^12.0 ]
         stability: [ prefer-lowest, prefer-stable ]
         include:
           - laravel: ^11.0
             testbench: ^9.0
+          - laravel: ^12.0
+            testbench: ^10.0
         exclude:
           - php: 8.4
+            laravel: ^11.0
             stability: prefer-lowest
-          - php: 8.4
-            carbon: ^2.0
 
 
-    name: P${{ matrix.php }} - L${{ matrix.laravel }} - C${{ matrix.carbon }} - ${{ matrix.stability }} - ${{ matrix.os }}
+    name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
     steps:
       - name: Checkout code
@@ -47,7 +47,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" "nesbot/carbon:${{ matrix.carbon }}" --no-interaction --no-update
+          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
           composer update --${{ matrix.stability }} --prefer-dist --no-interaction
 
       - name: Execute tests
