--- a/composer.json
+++ b/composer.json
@@ -17,15 +17,15 @@
     ],
     "require": {
         "php": "^8.3",
-        "illuminate/support": "^11.0",
-        "nesbot/carbon": "^2.0 || ^3.0",
+        "illuminate/support": "^11.0|^12.0",
+        "nesbot/carbon": "^3.0",
         "phpstan/phpstan": "^2.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.7",
         "larastan/larastan": "^3.0",
         "nunomaduro/collision": "^8.0",
-        "orchestra/testbench": "^9.0",
+        "orchestra/testbench": "^9.0|^10.0",
         "pestphp/pest": "^3.0",
         "pestphp/pest-plugin-laravel": "^3.0",
         "phpstan/extension-installer": "^1.1",
