--- a/composer.json
+++ b/composer.json
@@ -1,72 +1,79 @@
 {
-    "name": "soyhuce/phpstan-extension",
-    "description": "Extra rules for phpstan analysis",
-    "keywords": [
-        "soyhuce",
-        "laravel",
-        "phpstan"
+  "name": "soyhuce/phpstan-extension",
+  "description": "Extra rules for phpstan analysis",
+  "keywords": [
+    "soyhuce",
+    "laravel",
+    "phpstan"
+  ],
+  "homepage": "https://github.com/soyhuce/phpstan-extension",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Bastien Philippe",
+      "email": "bastien.philippe@soyhuce.fr",
+      "role": "Developer"
+    }
+  ],
+  "require": {
+    "php": "^8.3",
+    "illuminate/support": "^11.0|^12.0",
+    "nesbot/carbon": "^3.0",
+    "phpstan/phpstan": "^2.0"
+  },
+  "require-dev": {
+    "friendsofphp/php-cs-fixer": "^3.7",
+    "larastan/larastan": "^3.0",
+    "nunomaduro/collision": "^8.0",
+    "orchestra/testbench": "^9.0|^10.0",
+    "pestphp/pest": "^3.0",
+    "pestphp/pest-plugin-laravel": "^3.0",
+    "phpstan/extension-installer": "^1.1",
+    "phpstan/phpstan-deprecation-rules": "^2.0",
+    "phpstan/phpstan-phpunit": "^2.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "Soyhuce\\PhpstanExtension\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Soyhuce\\PhpstanExtension\\Tests\\": "tests",
+      "Larastan\\Larastan\\ReturnTypes\\": "larastan"
+    },
+    "exclude-from-classmap": [
+      "Larastan\\Larastan\\ReturnTypes\\TransHelperReturnTypeExtension"
     ],
-    "homepage": "https://github.com/soyhuce/phpstan-extension",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Bastien Philippe",
-            "email": "bastien.philippe@soyhuce.fr",
-            "role": "Developer"
-        }
-    ],
-    "require": {
-        "php": "^8.3",
-        "illuminate/support": "^11.0|^12.0",
-        "nesbot/carbon": "^3.0",
-        "phpstan/phpstan": "^2.0"
-    },
-    "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.7",
-        "larastan/larastan": "^3.0",
-        "nunomaduro/collision": "^8.0",
-        "orchestra/testbench": "^9.0|^10.0",
-        "pestphp/pest": "^3.0",
-        "pestphp/pest-plugin-laravel": "^3.0",
-        "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan-deprecation-rules": "^2.0",
-        "phpstan/phpstan-phpunit": "^2.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "Soyhuce\\PhpstanExtension\\": "src"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Soyhuce\\PhpstanExtension\\Tests\\": "tests"
-        }
-    },
-    "scripts": {
-        "cs": "vendor/bin/php-cs-fixer fix",
-        "analyse": "vendor/bin/phpstan analyse",
-        "test": "vendor/bin/pest",
-        "test-coverage": "vendor/bin/pest --coverage",
-        "all": [
-            "@cs",
-            "@test",
-            "@analyse"
-        ]
-    },
-    "config": {
-        "sort-packages": true,
-        "allow-plugins": {
-            "pestphp/pest-plugin": true,
-            "phpstan/extension-installer": true
-        }
-    },
-    "extra": {
-        "phpstan": {
-            "includes": [
-                "extension.neon"
-            ]
-        }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "files": [
+      "larastan/TransHelperReturnTypeExtension.php"
+    ]
+  },
+  "scripts": {
+    "cs": "vendor/bin/php-cs-fixer fix",
+    "analyse": "vendor/bin/phpstan analyse",
+    "test": "vendor/bin/pest",
+    "test-coverage": "vendor/bin/pest --coverage",
+    "all": [
+      "@cs",
+      "@test",
+      "@analyse"
+    ]
+  },
+  "config": {
+    "sort-packages": true,
+    "allow-plugins": {
+      "pestphp/pest-plugin": true,
+      "phpstan/extension-installer": true
+    }
+  },
+  "extra": {
+    "phpstan": {
+      "includes": [
+        "extension.neon"
+      ]
+    }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
