--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ ubuntu-latest ]
-        php: [ 8.3, 8.4 ]
+        php: [ 8.3, 8.4, 8.5 ]
         laravel: [ ^11.0, ^12.0 ]
         stability: [ prefer-lowest, prefer-stable ]
         include:
@@ -23,6 +23,9 @@ jobs:
             testbench: ^10.0
         exclude:
           - php: 8.4
+            laravel: ^11.0
+            stability: prefer-lowest
+          - php: 8.5
             laravel: ^11.0
             stability: prefer-lowest
 
